# scrapy-crawler

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
app/: consumer.py  crawler.py  database.py  settings.py
app/core/items/: __init__.py  apteka.py  base.py
app/core/middlewares/: __init__.py  check_response.py  httpx_downloader.py
app/core/models/: apteka.py  base.py
app/core/pipelines/: amqp.py
app/core/spiders/: base.py
app/migrations/: env.py
app/migrations/versions/: 2024_10_17_1601-b5649d3099ae_initial.py  2024_10_17_1917-e6ea9ddf5420_add_city_id.py  2024_10_21_1544-d0fb924b6529_add_city_id_as_primary_key_constraint.py
app/spiders/apteka/: __init__.py
app/spiders/apteka/april/: README.md  items.py  models.py  spider.py  start.py  utils.py
crawlers/: settings.py
crawlers/core/: items.py  middlewares.py  pipelines.py  spiders.py
crawlers/spiders/apteka/: april.py
