[tool.poetry]
name = "scrapy_crawler"
version = "0.1.0"
description = ""
authors = ["Konstantin Grudnitskiy <k.grudnitskiy@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
httpx = "^0.27.2"
faststream = {extras = ["cli"], version = "^0.5.27"}
aio-pika = "^9.4.3"
alembic = "^1.13.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.29.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
